# ADAN

./: .bandit.yml  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  .todo2.json  ADAN_Colab_Training.ipynb  ADAN_Colab_Training_V1.ipynb  ADAN_Colab_Training_V2.ipynb  ADAN_Colab_Training_V3.ipynb  ADAN_Colab_Training_V4.ipynb  ADAN_Colab_Training_V5.ipynb  ADAN_Colab_Training_v2.ipynb  ADAN_FUSION_ADAPTATIVE.md  ALERTE_CRITIQUE_PARITÉ.md  ALERTE_PORTFOLIO_DIMENSIONS.md  AMELIORATIONS_FINALES.md  ANALYSE_GAPS_100_POURCENT.md  ANALYSIS_FILES_INDEX.txt  AUDIT_COMPLET_FINAL.md  AUDIT_FINAL_PRÊT.txt  AUDIT_PARITÉ_FEATURES.md  BACKTEST_COMPLETE_SUMMARY.md  BACKTEST_FINAL_REPORT.md  BACKTEST_XRP_RESULTS.md  BEFORE_AFTER_COMPARISON.md  BEST_PARAMS_SUMMARY.md  BUG_ANALYSIS_TRAIN_SCRIPT.md  BUG_WINRATE_FIXED.md  CERTIFICAT_NAVIGABILITE.txt  CHANGELOG.md  CHANGES_SUMMARY.md  CHECKLIST_DECOLLAGE.md  COLAB_COMMANDS.sh  COLAB_COPY_PASTE_COMMANDS.txt  COLAB_INDEX.md  COLAB_LINK.txt  COLAB_LINKS_5_INSTANCES.md  (+401 more)
.cursor/: agent.json  config.json  project_metadata.json
backup/: multi_asset_env.py  status_exchange_connector.py
bot_pres/: README.md
cli/: adan_cli.py
config/: MIGRATION_SUMMARY.md  README.md  adan_11_config.yaml  agent_config.yaml  agent_config_adan11.yaml  agent_config_cpu.yaml  agent_config_gpu.yaml  api_keys.enc  config.yaml  config.yaml.backup  config_backup_20251122_060242.yaml  config_modular.yaml  data.yaml  data_config.yaml  data_config_adan11.yaml  data_config_cpu.yaml  data_config_cpu_lot1.yaml  data_config_cpu_test.yaml  data_config_gpu.yaml  dbe_config.yaml  environment.yaml  environment_config.yaml  feature_engineering.yaml  feature_extractor_config.yaml  logging_config.yaml  main_config.yaml  memory_config.yaml  optimization_config.yaml  optuna_best_w1_calibrated.yaml  optuna_best_w2_calibrated.yaml  optuna_best_w3.yaml  optuna_best_w3_calibrated.yaml  optuna_best_w4_calibrated.yaml  paths.yaml  risk_monitoring_config.yaml  trading_config.yaml  train_config.yaml  workers.yaml
configs/: agent_config_cpu.yaml  aggressive_config.yaml  data_config.yaml  dbe_config.yaml  environment_config.yaml  feature_engineering.yaml  logging_config.yaml  main_config.yaml  main_config.yaml.backup  position_config.yaml  reward_config.yaml  risk_config.yaml  risk_metrics_config.yaml  scalper_config.yaml  swing_config.yaml  trading_config.yaml  training_prod.yaml  training_test.yaml
data/: README.md
del/: ABSOLUTE_TRUTH_VERIFICATION.md  ADAN_PRODUCTION_READY.md  ADAN_SYSTEM_READY.md  CHANGES_APPLIED.md  CHECKPOINT_ANALYSIS_REPORT.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_SYSTEM_STATUS.txt  CORRECTIONS_FINALES.md  CORRECTIONS_SUMMARY.md  COVARIATE_SHIFT_FIX_GUIDE.md  COVARIATE_SHIFT_IMPLEMENTATION_SUMMARY.md  CRISIS_RESOLUTION_SUMMARY.txt  CRITICAL_ACTION_PLAN.md  CRITICAL_ANALYSIS_REPORT.md  CRITICAL_DATA_FLOW_FIXES_SUMMARY.md  DASHBOARD_BOTH_SCRIPTS_UPDATED.md  DASHBOARD_COMPLETION_SUMMARY.md  DASHBOARD_FIX_COMPLETE_SUMMARY.md  DASHBOARD_HEALTH_DIAGNOSTIC.md  DASHBOARD_ISSUES_DIAGNOSIS.md  DASHBOARD_LAUNCH_COMMANDS.md  DASHBOARD_MIGRATION_INDEX.md  DASHBOARD_QUICK_START.md  DASHBOARD_REAL_DATA_FIX_SPEC_SUMMARY.md  DASHBOARD_REAL_DATA_GUIDE.md  DASHBOARD_REAL_DATA_IMPLEMENTATION_COMPLETE.md  DASHBOARD_REAL_DATA_LIVE.md  DASHBOARD_REAL_DATA_SUMMARY.txt  DASHBOARD_STATUS.txt  DASHBOARD_TRANSFORMATION_SUMMARY.txt  DATA_FLOW_FIX_FINAL_REPORT.md  DATA_FLOW_FIX_PROGRESS.md  DATA_FLOW_ISSUES_IDENTIFIED.md  DATA_VALIDATION_REPORT.md  DEPLOYMENT_READY.md  DEPLOYMENT_READY_FINAL.md  DIAGNOSTIC_ADAN_CRITICAL_FINDINGS.md  DIAGNOSTIC_AND_FIXES_SUMMARY.md  DIAGNOSTIC_COMPLET_ADAN_FINDINGS.md  DIAGNOSTIC_FINAL_ADAN_SUMMARY.md  (+104 more)
diagnostic/: PHASE2_COMPLETION_SUMMARY.md
docs/: INTEGRATION.md  README.md  capital_tiers_guide.md  cnn_integration_technical.md  data_formats.md  dbe_guide.md  dynamic_behavior_engine.md  guide_commandes.md  multi_timeframe_integration.md  orchestration_performance_report.md  project_status_update.md  rapport_implementation_profils_execution.md  scripts_documentation.md  sprint_10_detailed_plan.md
historical_data/: quick_load_status.json
investigation_results/: all_issues_test.json  code_audit.json  consolidated_investigation.json  dead_modules_audit.json  metrics_audit.json  reward_calculator_audit.json
junit/: test-results.xml
models/: README.md  feature_scaler.joblib
notebooks/: 04_DBE_ANALYSIS_README.md  04_DBE_Analysis_README.md  README.md
optuna_results/: W1_best_params.yaml  W1_ppo_best_params.yaml  W2_best_params.yaml  W2_ppo_best_params.yaml  W3_best_params.yaml  W3_ppo_best_params.yaml  W4_best_params.yaml  W4_ppo_best_params.yaml
reports/: README.md
scripts/: 01_audit_codebase.py  02_audit_reward_calculator.py  03_audit_metrics.py  04_audit_logs.py  05_run_all_investigations.sh  06_generate_final_report.py  07_test_all_issues.py  EXECUTE_PHASE2_FINAL.sh  README.md  adan_btc_dashboard.py  adan_quick_diagnostic.sh  aggregate_trials_results.py  analyze_dbe_logs.py  analyze_dbe_metrics.py  analyze_decision_quality.py  analyze_decisions.py  analyze_environment.py  analyze_model.py  analyze_model_behavior.py  analyze_optuna_logs.py  analyze_tensorboard_logs.py  analyze_worker_logs_optimized.py  audit_dead_modules.py  audit_run.py  backtest_2024_oos.py  backtest_engine.py  backtest_final_rigorous.py  backtest_model_advanced.py  backtest_simple.py  backtest_validation_exhaustive.py  backtest_xrp.py  check_real_indicators.py  check_scalers.py  cleanup.py  cleanup_dead_code.sh  comprehensive_diagnostic.py  convert_real_data.py  dashboard_app.py  dashboard_honest.py  dashboard_utils.py  (+142 more)
src/: README.md
ta-lib/: Makefile  bin  config.status
test-results/: junit.xml  report.html
testnet/: README.md  adan_orchestrator.py  launch_adan.sh  launch_w1.sh  launch_w2.sh  launch_w3.sh  launch_w4.sh  run_all.sh  w1_simple.py  w4_direct_analysis.py  w4_monitor.py  w4_real_analysis.py  worker_launcher.py
tests/: README.md  conftest.py  test_clean_worker_id.py  test_dashboard_colors.py  test_dashboard_data_retrieval.py  (+32 more)
(+1488 files in other folders)
